# brkraw

./: .dockerignore  .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  mypy.ini  paper.bib  paper.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflow/: ci_workflow.yml
.github/workflows/: autotest.yml  ci_workflow.yml  flake8.yml  test.yml  validation.yml
brkraw/: __init__.py  config.py  config.yaml
brkraw/api/: __init__.py  analyzer.py  helper.py  loader.py
brkraw/api/analyzer/: __init__.py  affine.py  base.py  dataarray.py  scaninfo.py
brkraw/api/brkobj/: __init__.py  scan.py  study.py
brkraw/api/config/: __init__.py  config.yaml  manager.py
brkraw/api/config/fetcher/: __init__.py  base.py  snippets.py
brkraw/api/config/snippet/: __init__.py  app.py  base.py  bids.py  (+3 more)
brkraw/api/data/: __init__.py  loader.py  scan.py  study.py  study.yaml
brkraw/api/helper/: __init__.py  base.py  cycle.py  dataarray.py  diffusion.py  fid.py  frame_group.py  image.py  orientation.py  protocol.py  recipe.py  seqparams.py  slicepack.py
brkraw/api/plugin/: __init__.py
brkraw/api/pvobj/: __init__.py  base.py  dataset.py  parameters.py  parser.py  pvdataset.py  pvfiles.py  pvreco.py  pvscan.py  pvstudy.py  types.py
brkraw/app/: tonifti.py
brkraw/app/backup/: __init__.py  cache.py  handler.py
brkraw/app/tonifti/: __init__.py  base.py  brkraw.py  converter.py  header.py  loader.py  main.py  plugin.py  pvfiles.py  pvreco.py  pvscan.py  reco.py  scan.py  study.py  types.py
brkraw/app/viewer/: config.py  previewer.py  scan_list.py
brkraw/lib/: __init__.py  backup.py  errors.py  loader.py  orient.py  parser.py  pvobj.py  recoFunctions.py  recoSigpy.py  recon.py  reference.py  utils.py
brkraw/scripts/: brk_backup.py  brkraw.py  brkrecon.py
brkraw/ui/: config.py  main_win.py  previewer.py  scan_info.py  subj_info.py
examples/: BrkRaw_PythonAPI.ipynb
paper/: comments.md  paper.bib  paper.html  paper.md
plugin/sordino/: config.yaml  sordino.py  sordino2nii.py
tests/: 01_api_pvobj_test.py  04_api_data_test.py  compressed_sensing_example.py  conftest.py  logging.yaml  recon_api_tes_t.py  recon_api_test.py  recon_cs.py  recon_testing.py  recon_testing_pv360.py  recon_testing_pv6.py  recon_testing_pv6_2.py  recon_testing_pv6_3.py  recon_testing_pv7.py
